# gingerit

./: .coveragerc  .editorconfig  .gitignore  README.md  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: cleanup.yml  test.yml
gingerit/: gingerit.py
tests/: test_gingerit.py
